--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="http://static.kcc.network/logo/skcs.png" />
+  <link rel="icon" href="https://static.kcc.network/logo/skcs.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <link rel="apple-touch-icon" href="http://static.kcc.network/logo/skcs.png" />
-  <meta property="og:image" content="http://static.kcc.network/logo/skcs.png" />
+  <link rel="apple-touch-icon" href="https://static.kcc.network/logo/skcs.png" />
+  <meta property="og:image" content="https://static.kcc.network/logo/skcs.png" />
   <meta property="og:width" content="136" />
   <meta property="og:height" content="61" />
 
   <meta name="twitter:description"
     content="Stake KCS and get sKCS to accrue staking rewards over time and earn additional yields with high APY" />
   <meta name="twitter:card" content="summary" />
-  <meta name="twitter:image" href="http://static.kcc.network/logo/skcs.png" />
+  <meta name="twitter:image" href="https://static.kcc.network/logo/skcs.png" />
   <meta name="twitter:title" content="KCS Staking | sKCS" />
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
