--- a/public/index.html
+++ b/public/index.html
@@ -22,22 +22,23 @@
   <meta name="description"
     content="Stake KCS and get sKCS to accrue staking rewards over time and earn additional yields with high APY" />
   <meta name="keywords" content="KCS staking, sKCS, stake KCS" />
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-RRZGM5SJD1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || []
-    function gtag () {
-      dataLayer.push(arguments)
-    }
-    gtag('js', new Date())
-
-    gtag('config', 'G-RRZGM5SJD1')
-  </script> -->
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
+
+<!-- Global site tag (gtag.js) - Google Analytics --> -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WL03PJH3WF"></script>
+<script>
+  window.dataLayer = window.dataLayer || []
+  function gtag () {
+    dataLayer.push(arguments)
+  }
+  gtag('js', new Date())
+
+  gtag('config', 'G-WL03PJH3WF')
+</script>
 
 </html>
