fix(fix): fix i18n

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <div id="root"></div>
 </body>
 
-<!-- Global site tag (gtag.js) - Google Analytics --> -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-WL03PJH3WF"></script>
 <script>
   window.dataLayer = window.dataLayer || []
@@ -37,7 +37,6 @@
     dataLayer.push(arguments)
   }
   gtag('js', new Date())
-
   gtag('config', 'G-WL03PJH3WF')
 </script>
 
