feat(logo): fix logo

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="https://static.kcc.network/logo/skcs.png" />
+  <link rel="icon" href="/logo/skcs.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <link rel="apple-touch-icon" href="https://static.kcc.network/logo/skcs-media-image.png" />
